...

                android:text="@string/event_title"
                android:textSize="20sp"
                android:textColor="@color/primary_deep"/>

            <EditText
                android:id="@+id/edit_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginHorizontal="30dp"

                android:inputType="text"
...

                android:text="@string/event_description"
                android:textSize="20sp"
                android:textColor="@color/primary_deep"/>

            <EditText
                android:id="@+id/edit_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginHorizontal="30dp"

                android:inputType="textMultiLine"
...

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_reg_open_year"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginHorizontal="10dp"

                    android:inputType="number"
...
                    android:textSize="18sp"
                    android:maxLength="4"

                    android:background="@color/white" />

                <EditText
                    android:id="@+id/edit_reg_open_month"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginHorizontal="10dp"

                    android:inputType="number"
...
                    android:textSize="18sp"
                    android:maxLength="2"

                    android:background="@color/white" />

                <EditText
                    android:id="@+id/edit_reg_open_day"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginHorizontal="10dp"

                    android:inputType="number"
...

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_reg_close_year"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginHorizontal="10dp"

                    android:inputType="number"
...
                    android:textSize="18sp"
                    android:maxLength="4"

                    android:background="@color/white" />

                <EditText
                    android:id="@+id/edit_reg_close_month"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginHorizontal="10dp"

                    android:inputType="number"
...
                    android:textSize="18sp"
                    android:maxLength="2"

                    android:background="@color/white" />

                <EditText
                    android:id="@+id/edit_reg_close_day"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginHorizontal="10dp"

                    android:inputType="number"
...

                android:text="@string/waiting_list_capacity"
                android:textSize="20sp"
                android:textColor="@color/primary_deep"/>

            <EditText
                android:id="@+id/edit_capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginHorizontal="30dp"

                android:inputType="number"
...

            android:backgroundTint="@color/primary_dark"
            app:cornerRadius="12dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_button"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"

            android:text="@string/confirm"
            android:textSize="20sp"
...
